# Beap

./: README.md  beap.bat  beap.n  haxelib.json  run.n  tool.hxml
include/hashlink/: hl.h
src/: BeapTool.hx  Lang.hx  Main.hx  Run.hx
src/beap/: BeapTool.hx  Config.hx  Console.hx  Lang.hx  Main.hx  UserConfig.hx
src/beap/commands/: BuildCommand.hx  Command.hx  HelpCommand.hx  LangCommand.hx  SetupCommand.hx  StopCommand.hx  TestCommand.hx
src/beap/project/: ProjectConfig.hx
src/beap/utils/: Downloader.hx  PlatformUtils.hx
templates/android/sdl2/hxml/: debug.hxml  release.hxml
templates/android/sdl2/template/app/: build.gradle
templates/android/sdl2/template/app/jni/: readme.txt
templates/android/sdl2/template/app/src/main/cpp/: CMakeLists.txt
templates/android/sdl2/template/app/src/main/java/org/haxe/: HashLinkActivity.java
templates/android/sdl2/template/app/src/main/java/org/libsdl/app/: HIDDeviceManager.java
templates/android/sdl3/hxml/: debug.hxml  release.hxml
templates/android/sdl3/template/: build.txt
templates/android/sdl3/template/app/src/main/: AndroidManifest.xml
templates/android/sdl3/template/app/src/main/cpp/: CMakeLists.txt
templates/android/sdl3/template/app/src/main/cpp/hashlink/libs/ssl/: ssl.c
templates/android/sdl3/template/app/src/main/cpp/stb/: glyphme.cpp
templates/android/sdl3/template/app/src/main/java/org/haxe/: HashLinkActivity.java
templates/common/sdl2/: jni.c
templates/common/sdl2/hashlink/libs/sdl/: sdl.c
templates/common/sdl2/hashlink/src/std/: sys.c
templates/common/sdl3/: CMakeLists.txt  jni.c
templates/hl/sdl2/hxml/: debug.hxml  release.hxml
templates/hl/sdl3/hxml/: debug.hxml  release.hxml
templates/windows/: run.bat
templates/windows/sdl2/: debug.hxml  release.hxml
templates/windows/sdl3/: debug.hxml  release.hxml
templates/windows/sdl3/hxml/: debug.hxml  release.hxml
tools/android/libs/sdl2/: directx.hdll  directx.lib  dx12.hdll  dx12debug.hdll  fmt.lib  sdl.hdll  sdl.lib  sqlite.lib  uv.hdll
tools/hashlink-libs/directx/: dx12.cpp
tools/hashlink-libs/libuv/src/: thread-common.c
tools/hashlink-src/: allocator.c  allocator.h  jit.c  module.c
tools/windows/: sdl.hdll  sdl.lib  ui.hdll  ui.lib
tools/windows/sdl2/: fmt.hdll  heaps.hdll  heaps.lib  mysql.hdll  mysql.lib  openal.hdll  openal.lib  sqlite.hdll  ssl.hdll  ssl.lib  ui.hdll  ui.lib  uv.lib
tools/windows/sdl3/: directx.hdll  dx12.hdll  dx12.lib  dx12debug.hdll  dx12debug.lib  fmt.hdll  heaps.hdll  libhl.lib  mysql.hdll  openal.hdll  sdl.hdll  sdl.lib  sqlite.hdll  ssl.hdll  ui.hdll  uv.hdll
